Fixes   - Player controls not being usable (z-index)
Setting:
  - Automatically start slideshow in fullscreen

--- a/app/css/core.css
+++ b/app/css/core.css
@@ -38,6 +38,7 @@ kbd {
 video::-webkit-media-controls-panel {
   display: flex !important;
   opacity: .5 !important;
+  z-index: 1000;
 }
 
 .novideoui video::-webkit-media-controls-panel {
